--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="container">
       <div class="section-global">
       <div class="section1">
-     <div class="content1"> <h1>10,000+ of our <br> users love our <br> products.</h1> 
+     <div class="content1"> <h1>10,000+ YASSINE of our <br> users love our <br> products.</h1> 
 <P>   We only provide great products combined with excellent  <br>customer service.
   See what our satisfied customers are <br> saying about our services.</P>
    </div>
